plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'org.sonarqube' version '5.1.0.4882'
	id 'jacoco'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Jakarta Validation
	implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'

	implementation 'com.h2database:h2'

	implementation 'org.springframework.boot:spring-boot-starter-security'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'com.stripe:stripe-java:26.12.0'

	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'

	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
	testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform {
		includeTags 'unit', 'integration' // Ensures this task runs both unit and integration tests.
	}
}

sonar {
	properties {
		property "sonar.projectKey", "petpal"
		property "sonar.projectName", "petpal2"
		property 'sonar.token', "sqp_e9aab6ae7954b697ad572c094fda4e98d6c85263"
	}
}

jacocoTestReport {
	executionData fileTree(dir: "$buildDir", includes: [
			"jacoco/unitTest.exec",
			"jacoco/integrationTest.exec"
	])
	reports {
		xml.required = true
		html.required = true
	}
}

// Task for Unit Tests
tasks.register('unitTest', Test) {
	description = 'Run unit tests'
	useJUnitPlatform {
		includeTags 'unit' // Use @Tag("unit") in test classes
	}
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
}

// Task for Integration Tests
tasks.register('integrationTest', Test) {
	description = 'Run integration tests'
	useJUnitPlatform {
		includeTags 'integration' // Use @Tag("integration") in test classes
	}
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
}
